--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" href="https://bytegrad.com/course-assets/css/1/favicon.png">
+    <link rel="icon" type="image/png" href="assets/imgeditor-favicon-color.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" integrity="sha512-rSWTr6dChYCbhpHaT1hg2tf4re2jUxBWTuZbujxKg96+T87KQJriMzBzW5aqcb8jmzBhhNSx4XYGA6/Y+ok1vQ==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 
-    <title>SocialEditor -- Simple editor to create and publish social media posts</title>
+    <title>ImgEditor -- Simple image editor to create and publish images</title>
 </head>
 <body class="app">
 
     <header class="header">
-        <img src="https://bytegrad.com/course-assets/css/1/logo.svg" alt="logo" class="logo">
+        <img src="assets/imgeditor-favicon-white.png" alt="logo" class="logo">
         <button class="dd-toggle">File</button>
         <button class="dd-toggle">View</button>
         <button class="dd-toggle">New</button>
@@ -26,8 +26,8 @@
             <i class="fas fa-bell dd-toggle__icon"></i>
         </button>
         <button class="dd-toggle">
-            <img src="https://images.unsplash.com/photo-1614247484197-9c6164bb532f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=60&q=100" alt="User photo" class="dd-toggle__img">
-            <span class="dd-toggle__text">James O.</span>
+            <img src="https://images.unsplash.com/photo-1547465055-403c21e799d3?q=80&w=2688&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="User photo" class="dd-toggle__img">
+            <span class="dd-toggle__text">Hatice T.</span>
         </button>
     </header>
 
@@ -60,11 +60,11 @@
                 <i class="fas fa-angle-double-left panel__collapse-icon"></i>
             </div>
             <div class="panel__images">
-                <img class="panel__img" src="https://images.unsplash.com/photo-1543096222-72de739f7917?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&fit=crop&w=280&q=100" alt="Uploaded image">
-                <img class="panel__img" src="https://images.unsplash.com/photo-1475598322381-f1b499717dda?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&h=280&q=100" alt="Uploaded image">
-                <img class="panel__img" src="https://images.unsplash.com/photo-1615887023516-9b6bcd559e87?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=280&q=100" alt="Uploaded image">
-                <img class="panel__img" src="https://images.unsplash.com/photo-1615749190340-34c7c3b16784?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=280&q=100" alt="Uploaded image">
-                <img class="panel__img" src="https://images.unsplash.com/photo-1615707547992-93435f1e7f13?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=280&q=100" alt="Uploaded image">
+                <img class="panel__img" src="https://images.unsplash.com/photo-1605190382514-416d8c480c57?q=80&w=2302&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Trees in South Asia">
+                <img class="panel__img" src="https://images.unsplash.com/photo-1566816874952-efe670a52a9a?q=80&w=3024&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Taj Mahal">
+                <img class="panel__img" src="https://images.unsplash.com/photo-1559489110-40a90ee4e70a?q=80&w=2924&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Abandoned building surrounded by trees">
+                <img class="panel__img" src="https://images.unsplash.com/photo-1488654091480-0a2443430a4a?q=80&w=2958&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Pile of assorted colorful steel containers">
+                <img class="panel__img" src="https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Typewriter.jpg?q=80&w=2796&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Typewriter">
                 <button class="panel__btn">
                     <i class="fas fa-plus panel__upload-icon"></i>
                 </button>
@@ -74,17 +74,17 @@
         <main class="main">
             <div class="info-bar">
                 <section class="breadcrumbs">
-                    <a href="#" class="breadcrumbs__link">Facebook</a>
+                    <a href="#" class="breadcrumbs__link">Canva</a>
                     <i class="fas fa-angle-right breadcrumbs__icon"></i>
-                    <span class="breadcrumbs__name">Friday</span>
+                    <span class="breadcrumbs__name">Album</span>
                 </section>
                 <button class="button">Publish</button>
             </div>
 
             <div class="artboard">
                 <section class="canvas">
-                    <img class="canvas__bg-img" src="https://images.unsplash.com/photo-1615887023516-9b6bcd559e87?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=2134&q=100" alt="Background image">
-                    <img class="canvas__fg-img" src="https://images.unsplash.com/photo-1615887023516-9b6bcd559e87?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&fit=crop&w=1453&q=85" alt="Foreground image">
+                    <img class="canvas__bg-img" src="https://images.unsplash.com/photo-1503944168849-8bf86875bbd8?q=80&w=2948&auto=format&fit=crop&w=2134&q=100" alt="Background image">
+                    <img class="canvas__fg-img" src="https://images.unsplash.com/photo-1503944168849-8bf86875bbd8?q=80&w=2948&auto=format&fit=crop&w=1453&q=85" alt="Foreground image">
                     <div class="canvas__circle"></div>
                     <div class="canvas__circle"></div>
                     <div class="canvas__circle"></div>
