--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>ImgEditor -- Simple image editor to create and publish images</title>
 </head>
 <body class="app">
-
+    <script src="script.js"></script>
     <header class="header">
         <img src="assets/imgeditor-favicon-white.png" alt="logo" class="logo">
         <button class="dd-toggle">File</button>
